add player list to lobby state
